The Complete Python Course.

--- a/Python_Introductory_Course.ipynb
+++ b/Python_Introductory_Course.ipynb
@@ -3334,6 +3334,210 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### What Is a Thread?\n",
+    "A thread is a separate flow of execution. This means that your program will have two things happening at once. The threads may be running on different processors, but they will only be running one at a time.\n",
+    "\n",
+    "Because of the way CPython implementation of Python works, threading may not speed up all tasks. This is due to interactions with the GIL that essentially limit one Python thread to run at a time.\n",
+    "\n",
+    "Tasks that spend much of their time waiting for external events are generally good candidates for threading. Problems that require heavy CPU computation and spend little time waiting for external events might not run faster at all.\n",
+    "\n",
+    "Using threading in them helps to make the design cleaner and easier to reason about.\n",
+    "\n",
+    "### Starting a Thread\n",
+    "The Python standard library provides threading. Thread, in this module, nicely encapsulates threads, providing a clean interface to work with them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating the thread\n",
+      "Thread created\n",
+      "Thread: 1, started\n",
+      "waiting for the thread to be finished\n",
+      "Done----\n",
+      "Thread: 1, finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "import threading\n",
+    "import time\n",
+    "\n",
+    "def thread_function(name):\n",
+    "    print(\"Thread: %s, started\" %name)\n",
+    "    time.sleep(2)\n",
+    "    print(\"Thread: %s, finished\" %name)\n",
+    "\n",
+    "print(\"Creating the thread\")\n",
+    "x = threading.Thread(target=thread_function, args=(1,), daemon=False)\n",
+    "print(\"Thread created\")\n",
+    "x.start()\n",
+    "print(\"waiting for the thread to be finished\")\n",
+    "# x.join()\n",
+    "print(\"Done----\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**The main program wait for the completion of non-daemon threads, if the threads are daemon, then those threads are intermittently preempted at the time of completion af main thread (Main). Hence we need to use `x.join()` function in case we want the main program to wait until its threads are done with the execution. x.join() will wait for the threads to be completed with their execution, whether or not the threads are daemon.**\n",
+    "\n",
+    "### Starting the multiple threads."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Creating the thread\n",
+      "Thread created\n",
+      "Thread: 0, startedwaiting for the thread to be finished\n",
+      "Done----\n",
+      "Creating the thread\n",
+      "Thread created\n",
+      "\n",
+      "Thread: 1, startedwaiting for the thread to be finished\n",
+      "Done----\n",
+      "Creating the thread\n",
+      "\n",
+      "Thread created\n",
+      "Thread: 2, startedwaiting for the thread to be finished\n",
+      "Done----\n",
+      "\n",
+      "Thread: 0, finishedThread: 1, finished\n",
+      "Thread: 2, finished\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "thread_list = []\n",
+    "for i in range(3):\n",
+    "    print(\"Creating the thread\")\n",
+    "    x = threading.Thread(target=thread_function, args=(i,), daemon=False)\n",
+    "    print(\"Thread created\")\n",
+    "    x.start()\n",
+    "    thread_list.append(x)\n",
+    "    print(\"waiting for the thread to be finished\")\n",
+    "    print(\"Done----\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using a ThreadPoolExecutor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Thread: 2, started\n",
+      "Thread: 3, started\n",
+      "Thread: 4, started\n",
+      "Thread: 2, finishedThread: 4, finished\n",
+      "Thread: 3, finished\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import concurrent.futures\n",
+    "with concurrent.futures.ThreadPoolExecutor(max_workers=3) as executor:\n",
+    "        executor.map(thread_function, range(2, 5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The code creates a ThreadPoolExecutor as a context manager, telling it how many worker threads it wants in the pool. It then uses .map() to step through an iterable of things, in your case range(3), passing each one to a thread in the pool.\n",
+    "\n",
+    "The end of the with block causes the ThreadPoolExecutor to do a .join() on each of the threads in the pool.(`with` will take care) It is strongly recommended that you use ThreadPoolExecutor as a context manager when you can so that you never forget to .join() the threads."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### With statement in Python\n",
+    "With the \"With\" statement, you get better syntax and exceptions handling. \n",
+    "\n",
+    "\"The with statement simplifies exception handling by encapsulating common\n",
+    "preparation and cleanup tasks.\"\n",
+    "\n",
+    "In addition, it will automatically close the file. The with statement provides\n",
+    "a way for ensuring that a clean-up is always used."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shinyyshammy\n"
+     ]
+    }
+   ],
+   "source": [
+    "file_1 = open(\"/Users/apple/Desktop/go_green.txt\")\n",
+    "data_1 = file_1.read()\n",
+    "print (data_1)\n",
+    "file_1.close()  # It's important to close the file when you're done with it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shinyyshammy\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"/Users/apple/Desktop/go_green.txt\") as file_1: # Use file_1 to refer to the file object\n",
+    "    data_1 = file_1.read()\n",
+    "    print(data_1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`file_1.close()` is automatically called"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -3357,7 +3561,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
